--- a/resume/resume.html
+++ b/resume/resume.html
@@ -88,7 +88,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a></p>
+      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a> • <a href="https://github.com/nppipala123/AIDD-Assignment-5">Repo</a></p>
     </div>
   </footer>
 </body>
