--- a/about/about.html
+++ b/about/about.html
@@ -39,7 +39,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a> • <a href="https://github.com/nppipala123/AIDD-Assignment-5">Repo</a></p>
+      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a> • assignment 5: <a href="https://github.com/nppipala123/AIDD-Assignment-5">https://github.com/nppipala123/AIDD-Assignment-5</a></p>
     </div>
   </footer>
 </body>
