--- a/resume/resume.html
+++ b/resume/resume.html
@@ -84,11 +84,32 @@
       <h3>ADDITIONAL</h3>
       <p>Computer Building, Golfing, AI Strategy, Consulting, Spanish, Language Learning</p>
     </section>
+
+    <section class="resume-download">
+      <h3>Download Resume</h3>
+      <div class="resume-actions">
+        <a href="Pipala_Nicholas_Resume_Final.pdf" download class="btn">
+          📄 Download PDF Resume
+        </a>
+      </div>
+    </section>
+
+    <section class="resume-embed">
+      <h3>Resume Preview</h3>
+      <iframe 
+        src="Pipala_Nicholas_Resume_Final.pdf" 
+        width="100%" 
+        height="600px"
+        style="border: 1px solid #ddd; margin-top: 1rem; border-radius: 8px;">
+        <p>Your browser doesn't support PDFs. 
+        <a href="Pipala_Nicholas_Resume_Final.pdf">Download the resume instead</a></p>
+      </iframe>
+    </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a> • <a href="https://github.com/nppipala123/AIDD-Assignment-5">Repo</a></p>
+      <p>&copy; 2025 Nicholas Pipala • <a href="https://github.com/nppipala123">GitHub: nppipala123</a> • <a href="mailto:nppipala@iu.edu">nppipala@iu.edu</a> • assignment 5: <a href="https://github.com/nppipala123/AIDD-Assignment-5">https://github.com/nppipala123/AIDD-Assignment-5</a></p>
     </div>
   </footer>
 </body>
